# censorADMET

./: .gitignore  .zenodo.json  ATTRIBUTION.md  CHANGELOG.md  CITATION.cff  LICENSE_CODE  Makefile  README.md  pyproject.toml
LICENSES/: README.md  THIRD_PARTY.md
configs/: manuscript-v1.0.0.json
data/: DATASET_README.md  README.md
data/admet_endpoints/: Clearance_mLminkg.parquet  HalfLife_hr_sub.parquet  Solubility_nM.parquet
data/endpoints/: ABCB1_IC50_B.parquet  CYP1A2_IC50_A.parquet  CYP2C19_IC50_A.parquet  CYP2C9_IC50_A.parquet  CYP2D6_IC50_A.parquet  CYP3A4_IC50_A.parquet  CYP3A4_IC50_B.parquet  hERG_IC50_B.parquet  hERG_IC50_T.parquet  hERG_Ki_B.parquet
data/provenance/: curation_lineage.json  curation_rules.md  curation_summary.csv  data_dictionary.md  duplicate_resolution_summary.csv  endpoint_audit.csv  endpoint_manifest.csv  (+3 more)
results/: README.md  primary_feasibility_audit.csv
scripts/: audit_conformal_samples.py  build_release_manifest.py  check_method_numbers.py  export_fixed_splits.py  run_anchor_sensitivity.py  run_anchored_weighted_tobit.py  run_conformal_study.py  run_dmpnn_study.py  run_feasibility.py  run_hidden_truth_study.py  run_matrix.py  run_primary_feasibility_audit.py  run_soft_satisficing.py  summarize_primary_feasibility.py  synthesize_results.py  validate_fixed_splits.py
tests/: test_analysis.py  test_baselines.py  test_conformal.py  test_context_mechanism.py  test_data_cache.py  test_dmpnn.py  test_experiment.py  test_hidden_truth.py  test_satisficing_losses.py  test_splits_metrics.py  test_trainer.py  test_transfer_head.py
(+149 files in other folders)
