[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "censoradmet"
version = "1.0.0"
description = "Constraint-satisficing regression for censored ADMET data."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
  {name = "Evangelia Mitropoulou"},
  {name = "Dimitris Giannopoulos"},
]
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "pyarrow>=14",
  "scipy>=1.11",
  "scikit-learn>=1.3",
  "matplotlib>=3.8",
  "torch>=2.2",
  "xgboost>=2.0",
]

[project.optional-dependencies]
chemistry = ["rdkit"]
test = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src/censoradmet"]
